# rilog

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/rilog/: __init__.py  logger.py
tests/: __init__.py  logger.py
